--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
             <p>
-                Ola sou o Renan sou desenvolvedor web
+                Ola sou o Renan sou desenvolvedor web e tecnico de softwer
             </p>
         </article>
 
