--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="sobre">
         <h2>Sobre mim</h2>
-        <img src="605884779_122109979431143971_5154734710095214755_n.jpg" width="150px" title="Renan">
+        <img src="WhatsApp Image 2026-02-25 at 15.28.01.jpeg" width="150px" title="Renan">
           
 
 
