--- a/index.html
+++ b/index.html
@@ -19,67 +19,124 @@
                 <li><a href="#contato"">contato</a></li>
             
                 <!-- <li>sobre mim</li> -->
-            </ul>
+            </ul>                                                                                                                                                                                                                                                                                                                                                       
         </nav>
     </header>
 
-    <section id="sobre">
-        <h2>Sobre mim</h2>
-        <img src="WhatsApp Image 2026-02-25 at 15.28.01.jpeg" width="150px" title="Renan">
-          
+     <section id=" sobre">
+                        <h2>Sobre mim</h2>
+                        <img src="WhatsApp Image 2026-02-25 at 15.28.01.jpeg" width="150px" title="Renan">
 
+                        <article>
+                            <p>
+                                Ola sou o Renan sou desenvolvedor web e tecnico de softwer
+                            </p>
+                        </article>
+                        <aside>
+                            <h2>habilidades</h2>
 
-        <article>
-
-
-            <p>
-                Ola sou o Renan sou desenvolvedor web e tecnico de softwer
-            </p>
-        </article>
-
-        <aside>
-
-            <h2>habilidades</h2>
-
-            <ul>
-                <li>HTML</li>
-                <LI>CSS</LI>
-                <LI>javaScript</LI>
+                            <ul>
+                                li>HTML</li>
+                <li>CSS</li>
+                <li>javaScript</li>
             </ul>
-        </aside>
-    </section>
+            </aside>
+            </section>
 
-    <section id="Projetos">
+            <section id="Projetos">
 
-        <h2>Projetos</h2>
+                <h2>Projetos</h2>
 
-        <article>
-            <h3>Portfólio</h3>
-            <p>
-                Este site desenvolvi estudando Front-end na Sctec!
-            </p>
-        </article>
+                <article>
+                    <h3>Portfólio</h3>
+                    <p>
+                        Este site desenvolvi estudando Front-end na Sctec!
+                    </p>
 
-    </section>
-
-    <footer>
-        <p>Direitos reservado a Renan Netto</p>
-
-        <section id="contato">
-
-            <h2>contato</h2>
-            <p> Tem um projeto em mente?entre em contato:</p>
-
-            <address>
-                E-mail: <a href="mailto:renannetto732@gmail.com">renannetto732@gmail.com</a> <br>
-                Telefone: <a href="tel:(47)992399377">(47)992399377</a>
+                </article>
 
 
-            </address>
-        </section>
+            </section>
 
-    </footer>
+            <section>habilidades</section>
+
+            <h2>habilidades e tecnologias</h2>
+
+            <table>
+
+                <thead>
+
+                    <tr>
+                        <th>tecnologia</th>
+                        <th>nivel</th>
+                        <th>discricao</th>
+                    </tr>
+                </thead>
+    <tbody>
+        <tr>
+            <td>html</td>
+            <td>iniciante</td>
+            <td>Capaz de construir estruturas de páginas web semânticas e responsivas</td>
+
+            <td>css</td><br>
+            <td>intermediarios</td>
+            <td>Experiência com flexbox,grid e animações CSS</td>
+
+            <td>JavaScript</td><br>
+            <td>Básico</td>
+            <td>Desenvolvimento de scripts do lado do cliente para interações</td>
+        </tr>
+    </tbody>
+
+            </table>
+
+            <section id="contato">
+
+                <h2>contato</h2>
+
+                <p> Tem um projeto em mente?entre em contato:</p>
+
+
+                <form action="">
+
+                    <label for="Nome">Nome: </label><br>
+                    <input type="text" id="Nome" nome="nome" required><br>
+
+                    <label for="email">email: </label><br>
+                    <input type="email" id="email" email="email" required><br>
+
+                    <label for="Telefone">Telefone: </label><br>
+                    <input type="tel" id="Telefone" Telefone="Telefone"><br>
+
+                    <label for="assunto">assunto:</label><br>
+                    <select name="assunto" id="assunto"><br>
+
+                        <option value="orcamento">Orçamento</option>
+                        <option value="duvida">duvida</option>
+                        <option value="outro">Outros</option>
+                    </select>
+
+                    <br>
+
+                    <label for="mensagem">mensagem:</label>
+                    <textarea name="mensagem" id="mensagem" cols="30" rows="10"></textarea>
+                    <br>
+                    <input type="checkbox" id="inscricao" name="inscricao">
+                    <label for="inscricao">Deseja receber minha newletter?Fique por dentro </label>
+
+                    <br>
+
+                    <input type="submit" value="enviar mensagem">
+                </form>
+
+
+
+            </section>
+
+            </footer>
 
 </body>
 
 </html>
+<footer>
+    <p>Direitos reservado a Renan Netto</p>
